--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,6 @@
 <div>
     Welcome to my software
 </div>
-<a href="/working/initSetting.html">doWorking</a>
+<a href="/settingView">Working</a>
 </body>
 </html>
