--- a/src/main/resources/templates/initSetting.html
+++ b/src/main/resources/templates/initSetting.html
@@ -10,14 +10,14 @@
 </div>
 <div name="form_setting">
     <form action="/setting" method="post">
-        월급 받는 날 : <input type="text" name="salaryDay"> 일 <br>
-        월급 : <input type="text" name="salary"> 원 <br>
-        1주 몆일 근무 : <input type="text" name="checkWeekWorking"> 일 <br>
-        1주 근무 시간 : <input type="text" name="weekWorking"> 시간 <br>
-<!--        출근 시간 : <input type="time" name="startWorkTime"> 시간 <br>-->
-<!--        퇴근 시간 : <input type="time" name="endWorkTime"> 시간 <br>-->
-        <input type="submit" name="submit">제출 <br>
-        <input type="reset" name="reset">리셋 <br>
+        월급 받는 날 : <input type="text" name="salaryDay"> day <br>
+        월급 : <input type="text" name="salary"> won <br>
+        1주 몆일 근무 : <input type="text" name="checkWeekWorking"> day <br>
+        1주 근무 시간 : <input type="text" name="weekWorking"> hour <br>
+        출근 시간 : <input type="time" name="startWorkTime"> hour <br>
+        퇴근 시간 : <input type="time" name="endWorkTime"> hour <br>
+        <input type="submit" value="submit"> <br>
+        <input type="reset" value="reset"> <br>
     </form>
 </div>
 <a href="/workList">list</a>
