--- a/src/main/resources/templates/initSetting.html
+++ b/src/main/resources/templates/initSetting.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     input box plz
-    주 5일 (월~금) / 주 6일(월~토) / 지정 요일은 개발예정...
+    주 5일 (월~금) / 주 6일(월~토) - 주간 / 지정 요일, 야간 은 개발예정...
 </div>
 <div name="form_setting">
     <form action="/setting" method="post">
