--- a/src/main/resources/static/js/workTime/templates/registry.html
+++ b/src/main/resources/static/js/workTime/templates/registry.html
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<div>
-    input box plz
-    주 5일 (월~금) / 주 6일(월~토) - 주간 / 지정 요일, 야간 은 개발예정...
-</div>
-<div name="form_setting">
-    <form action="/setting" method="post">
+<div name="registry_form">
+    <div>
+        주 5일 (월~금) / 주 6일(월~토) - 주간 / 지정 요일, 야간 은 개발예정...
+    </div>
+    <form action="#/registry" method="post">
         월급 받는 날 : <input type="text" name="salaryDay"> day <br>
         월급 : <input type="text" name="salary"> won <br>
         1주 몆일 근무 : <input type="text" name="checkWeekWorking"> day <br>
         1주 근무 시간 : <input type="text" name="weekWorking"> hour <br>
         출근 시간 : <input type="time" name="startWorkTime"> hour <br>
         퇴근 시간 : <input type="time" name="endWorkTime"> hour <br>
-        <input type="submit" value="submit"> <br>
-        <input type="reset" value="reset"> <br>
+        <input type="submit" value="submit"> <input type="reset" value="reset"> <br>
     </form>
 </div>
-<a href="/workList">list</a>
-</body>
-</html>
