--- a/src/main/resources/static/js/workTime/templates/workTimeMain.html
+++ b/src/main/resources/static/js/workTime/templates/workTimeMain.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        workTimeMain page
+        ---------------------------workTimeMain page----------------------------------
     </div>
     <ul id="workTimeList"/>
 </div>
