--- a/src/main/resources/static/js/workTime/templates/workList.html
+++ b/src/main/resources/static/js/workTime/templates/workList.html
@@ -1,4 +1,4 @@
-<table>
+<table style="display:table;width:100%;table-layout: fixed;">
     <tr>
         <th>번호</th>
         <th>월급</th>
@@ -10,17 +10,23 @@
         <th>점심 시작 시간</th>
         <th>점심 종료 시간</th>
     </tr>
-    <tbody id="tbody">
-    <tr>
-        <td>{{id}}</td>
-        <td>{{salary}}</td>
-        <td>{{monthWorkingModel.salaryDay}}</td>
-        <td>{{monthWorkingModel.weekWorkingDay}}</td>
-        <td>{{weekWorkingTime}}</td>
-        <td>{{todayWorkingModel.workTime.from}}</td>
-        <td>{{todayWorkingModel.workTime.to}}</td>
-        <td>{{todayWorkingModel.restTime.from}}</td>
-        <td>{{todayWorkingModel.restTime.to}}</td>
-    </tr>
+    <tbody id="tbody" style="text-align: center">
+        {{#workTime}}
+        <tr class="workTarget">
+            <td class="workId">{{id}}</td>
+            <td>{{salary}}</td>
+            <td>{{monthWorkingModel.salaryDay}}</td>
+            <td>{{monthWorkingModel.weekWorkingDay}}</td>
+            <td>{{weekWorkingTime}}</td>
+            <td>{{todayWorkingModel.workTime.from}}</td>
+            <td>{{todayWorkingModel.workTime.to}}</td>
+            <td>{{todayWorkingModel.restTime.from}}</td>
+            <td>{{todayWorkingModel.restTime.to}}</td>
+        </tr>
+        {{/workTime}}
     </tbody>
 </table>
+<button id="workTimeRegister">Register open</button>
+<div id="registry">
+</div>
+<div id="result"></div>
