--- a/src/main/resources/static/js/workTime/templates/workList.html
+++ b/src/main/resources/static/js/workTime/templates/workList.html
@@ -29,4 +29,6 @@
 <button id="workTimeRegister">Register open</button>
 <div id="registry">
 </div>
-<div id="result"></div>
+<div id="timeRun">
+    리스트를 선택해주세요.
+</div>
