--- a/src/main/resources/static/js/workTime/templates/timeRun.html
+++ b/src/main/resources/static/js/workTime/templates/timeRun.html
@@ -23,9 +23,9 @@
         <td>{{monthWorkingModel.past.totalDay}}</td>
         <td>{{monthWorkingModel.past.weekDay}}</td>
         <td>{{monthWorkingModel.past.weekendDay}}</td>
-        <td id="endTime">...</td>
-        <td id="restTime">...</td>
-        <td id="burningMoney">{{burningMoney}}</td>
+        <td id="endTime">{{leftWorkSec}}</td>
+        <td id="restTime">{{leftRestSec}}</td>
+        <td id="burningMoney">{{earningMoney}}</td>
     </tr>
     {{/result}}
     </tbody>
