--- a/src/main/resources/static/js/workTime/templates/registry.html
+++ b/src/main/resources/static/js/workTime/templates/registry.html
@@ -2,17 +2,16 @@
     <div>
         주 5일 (월~금) / 주 6일(월~토) - 주간 / 지정 요일, 야간 은 개발예정...
     </div>
-    <form id="addForm" action="#/workTimeMain">
-        <div>
-            월급 받는 날 : <input type="text" name="salaryDay"> day <br>
-            월급 : <input type="text" name="salary"> 원 <br>
-            1주 몆일 근무 : <input type="text" name="checkWeekWorking"> 일 <br>
-            1주 근무 시간 : <input type="text" name="weekWorking"> 시간 <br>
-            출근 시간 : <input type="time" name="startWorkTime"> <br>
-            퇴근 시간 : <input type="time" name="endWorkTime"> <br>
-            휴식 시작 시간 : <input type="time" name="startRestTime"> <br>
-            휴식 종료 시간 : <input type="time" name="endRestTime"> <br>
-            <button id="add" formaction="#/workTimeMain">Add</button>
-        </div>
-    </form>
+<!--  form 태그 사용법  -->
+    <div id="addForm">
+        월급 받는 날 : <input type="text" name="salaryDay"> day <br>
+        월급 : <input type="text" name="salary"> 원 <br>
+        1주 몆일 근무 : <input type="text" name="weekWorkingDay"> 일 <br>
+        1주 근무 시간 : <input type="text" name="weekWorkingTime"> 시간 <br>
+        출근 시간 : <input type="time" name="startWorkTime"> <br>
+        퇴근 시간 : <input type="time" name="endWorkTime"> <br>
+        휴식 시작 시간 : <input type="time" name="startRestTime"> <br>
+        휴식 종료 시간 : <input type="time" name="endRestTime"> <br>
+        <button id="add">Add</button>
+    </div>
 </div>
