--- a/src/main/resources/static/js/workTime/templates/timeRun.html
+++ b/src/main/resources/static/js/workTime/templates/timeRun.html
@@ -23,8 +23,8 @@
         <td>{{monthWorkingModel.past.totalDay}}</td>
         <td>{{monthWorkingModel.past.weekDay}}</td>
         <td>{{monthWorkingModel.past.weekendDay}}</td>
-        <td id="endTime">{{leftWorkSec}}</td>
-        <td id="restTime">{{leftRestSec}}</td>
+        <td id="endTime">{{leftWork}}</td>
+        <td id="restTime">{{leftRest}}</td>
         <td id="burningMoney">{{earningMoney}}</td>
     </tr>
     {{/result}}
